# ptde_practice_tool

./: .gitignore  Cargo.toml  config.toml  crystal_homing_soul mass.txt  items_formatted.txt
.github/workflows/: rust.yml
selfconfig/: DEBUG_DRAW_HOOKS.md  ILHOOK_INTEGRATION.md  debug_draw.cpp  debug_draw_hooks.rs  debug_draw_hooks_old.rs  debugdraw.vcxproj
src/: config.rs  lib.rs  main.rs  render_loop.rs
src/memory/: mod.rs
src/memory/ds1/: constants.rs  debug_draw_hooks.rs  debug_draw_offsets.txt  mod.rs  offsets.rs
src/ui/: bonfire.rs  debug_info.rs  items.rs  mod.rs  player.rs
