[package]
name = "Ptdetest"
version = "0.1.0"
edition = "2024"

[dependencies]
hudhook = "0.7.0"
imgui = "0.12.0"
mem-rs = "0.2.5"
windows-sys = { version = "0.52", features = ["Win32_UI_WindowsAndMessaging", "Win32_Foundation", "Win32_Graphics_Gdi"] }

[lib]
crate-type = ["cdylib", "rlib"]
name = "hello_hud"
