[package]
name = "Ptdetest"
version = "0.1.0"
edition = "2024"

[dependencies]
hudhook = "0.7.0"
imgui = "0.12.0"
mem-rs = "0.2.5"
windows-sys = { version = "0.52", features = ["Win32_UI_WindowsAndMessaging", "Win32_Foundation", "Win32_Graphics_Gdi", "Win32_System_Memory"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"

[target.'cfg(target_os = "windows")'.dependencies]
ilhook = { version = "2.3", default-features = false, features = ["x86"] }

[lib]
crate-type = ["cdylib", "rlib"]
name = "hello_hud"
